--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
     <title>Zetsy - Handmade</title>
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css">
     <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.1/modernizr.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:700" rel="stylesheet">
   </head>
 
   <body>
     <div class="wrapper">
+      <header>
       <h1>Zetsy</h1>
+      </header>
+
+      <section id="featured">
       <img src="http://learn-co-curriculum.github.io/fe-zetsy/images/necklace.jpg" />
 
       <h2>About</h2>
@@ -35,11 +40,27 @@
       and Sedona Monthly. The collection is sold across the United States and
       Europe and is carried by the retail stores of Bergdorf Goodman.
       </p>
+    </section>
 
+      <section id="press">
       <h2>Press</h2>
       <a href="http://nmai.si.edu">
-        <img src="images/nmai-logo.png">
+        <img src="http://learn-co-curriculum.github.io/fe-zetsy/images/nmai-logo.png">
       </a>
+
+      <a href="http://www.nytimes.com/pages/t-magazine/">
+        <img src="http://learn-co-curriculum.github.io/fe-zetsy/images/times-logo.png">
+      </a>
+
+      <a href="http://www.sedonamonthly.com">
+        <img src="http://learn-co-curriculum.github.io/fe-zetsy/images/sedona-logo.png">
+      </a>
+
+      <a href="http://www.bergdorfgoodman.com/">
+        <img src="http://learn-co-curriculum.github.io/fe-zetsy/images/bergdorf-logo.png">
+      </a>
+      </section>
+      <p>&copy; 2014 Zetsy, All Rights Reserved.</p>
     </div>
   </body>
 </html>
